# Reinforcement_Learning_for_Two_Dimensional_Satellite_Collision_Avoidance

./: .gitignore  main.py  notes.txt  pyproject.toml  requirements.txt
code/: RL.py  environment.py  main.ipynb  main.py  plotting.py  sandbox.ipynb  satellite.py
